(fix) list styling and improve responsiveness on mobile

--- a/apps/dashboard/src/styles/dashboard.scss
+++ b/apps/dashboard/src/styles/dashboard.scss
@@ -220,7 +220,10 @@ Karrio custom styling
     width: 8%;
   }
 
-  .description {}
+  .description {
+    min-width: 200px;
+    max-width: 200px;
+  }
 
   .date {
     width: 20%;
@@ -237,15 +240,16 @@ Karrio custom styling
 }
 
 .events-table {
-  .event {}
-
-  .id {
-    width: 20%;
+  .description {
+    width: 80%;
+    min-width: 200px;
+    max-width: 200px;
   }
 
   .date {
     width: 20%;
-    min-width: 185px;
+    min-width: 190px;
+    max-width: 190px;
   }
 
   tbody>tr.items {
@@ -273,7 +277,7 @@ Karrio custom styling
   }
 
   .last-event {
-    min-width: 10vw;
+    min-width: 200px;
     max-width: 200px;
   }
 
@@ -309,7 +313,6 @@ Karrio custom styling
   }
 
   .last-event {
-    width: 10%;
     min-width: 150px;
     max-width: 150px;
   }
@@ -376,6 +379,7 @@ Karrio custom styling
   .date {
     width: 15%;
     min-width: 130px;
+    max-width: 130px;
   }
 }
 
